--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare && prisma generate"
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/i18n": "^9.1.1",
     "@nuxtjs/supabase": "^1.4.4",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
-    "@prisma/nuxt": "^0.1.3",
     "@tanstack/vue-table": "^8.20.5",
     "@tiptap/extension-code-block": "^2.10.3",
-    "@tiptap/extension-code-block-lowlight": "^2.10.3",
-    "@tiptap/extension-link": "^2.10.3",
-    "@tiptap/extension-placeholder": "^2.10.3",
     "@tiptap/extension-youtube": "^2.10.3",
     "@vee-validate/nuxt": "^4.14.7",
     "@vee-validate/zod": "^4.14.7",
@@ -28,15 +25,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "highlight.js": "^11.11.0",
-    "lowlight": "^3.3.0",
     "lucide-vue-next": "^0.468.0",
     "nuxt": "^3.14.1592",
-    "nuxt-purgecss": "^2.0.0",
-    "nuxt-tiptap-editor": "^2.1.4",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.1.3",
-    "prisma": "^6.0.1",
     "prismjs": "^1.29.0",
     "radix-vue": "^1.9.11",
     "reading-time-estimator": "^1.11.0",
