--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/i18n": "^9.1.1",
+    "@nuxtjs/mdc": "^0.11.1",
     "@nuxtjs/supabase": "^1.4.4",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@pinia/nuxt": "^0.9.0",
